--- a/app/src/main/res/menu/homepage_developer.xml
+++ b/app/src/main/res/menu/homepage_developer.xml
@@ -37,15 +37,24 @@ android:icon="@drawable/chat"
         android:title="Contact Us"
         android:icon="@drawable/phone1"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/appLogOut"
-        android:icon="@drawable/logout_1"
-        android:title="Log Out" />
+
     <item
         android:id="@+id/uploadproject"
         android:orderInCategory="100"
         android:title="Upload Project"
         android:icon="@drawable/phone1"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/reevaluation"
+        android:orderInCategory="100"
+        android:title="Returned Projects"
+        android:icon="@drawable/phone1"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/appLogOut"
+        android:icon="@drawable/logout_1"
+        android:title="Log Out" />
+
 
 </menu>
