--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,7 +38,24 @@
     <color name="divider">#E0E0E0</color>
 
 
+    <color name="primary_color">#1976D2</color>
+    <color name="primary_dark_color">#0D47A1</color>
+    <color name="accent_color">#FF4081</color>
+    <color name="background_color">#F5F5F5</color>
 
+    <color name="pending_color">#FFA000</color>
+    <color name="approved_color">#4CAF50</color>
+    <color name="rejected_color">#F44336</color>
+
+
+
+    <color name="text_tertiary">#9E9E9E</color>
+
+    <!-- Status and action colors -->
+    <color name="status_success">#4CAF50</color>
+    <color name="status_warning">#FFC107</color>
+    <color name="status_error">#F44336</color>
+    <color name="ripple_color">#33000000</color>
 
 
 </resources>
